Fixed Chat Room overflow styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,4 +36,5 @@ a {
 
 .central-panel{
   flex: 1;
+  overflow: auto;
 }
